--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,8 +20,8 @@
 
     <!-- Style for a tab that displays a category name -->
     <style name="CategoryTab" parent="Widget.Design.TabLayout">
-        <item name="tabIndicatorColor">@android:color/white</item>
-        <item name="tabSelectedTextColor">@android:color/white</item>
+        <item name="tabIndicatorColor">@android:color/holo_purple</item>
+        <item name="tabSelectedTextColor">@android:color/holo_purple</item>
         <item name="tabTextAppearance">@style/CategoryTabTextAppearance</item>
     </style>
 
