Added strings to the strings file to account for all of the strings in the file.
Modified the TopSpot Array to take in int as an input for the referenced strings.

Modified all of the arrays to reference the appropriate strings.

Modified the arrays name to match the purpose of that specific array.

Added the pictures to the files (i think that this was the related to this commit).

Updated the list_item text to match the purpose of the application.

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -26,26 +26,24 @@
         android:paddingLeft="16dp">
 
         <TextView
-            android:id="@+id/location_number"
+            android:id="@+id/location_name"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_weight="1"
             android:gravity="bottom"
             android:textAppearance="?android:textAppearanceMedium"
-
             android:textStyle="bold"
-            tools:text="lutti" />
+            tools:text="Location Name" />
 
         <TextView
-            android:id="@+id/location_name"
+            android:id="@+id/location_number"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:layout_below="@id/location_number"
+            android:layout_below="@id/location_name"
             android:layout_weight="1"
             android:gravity="top"
             android:textAppearance="?android:textAppearanceMedium"
-
-            tools:text="one" />
+            tools:text="xxx-xxx-xxxx" />
 
 
     </RelativeLayout>
