--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,24 +14,20 @@
      limitations under the License.
 -->
 <resources>
-    <!-- Primary color of the app (shown in the app bar) -->
-    <color name="primary_color">#4A312A</color>
 
-    <!-- Primary dark color of the app (shown in the status bar) -->
-    <color name="primary_dark_color">#2F1D1A</color>
 
-    <!-- Background color for app -->
-    <color name="tan_background">#FFF7DA</color>
+    <!-- Background color for the restaurants category -->
+    <color name="category_restaurants">#B2DFDB</color>
 
-    <!-- Background color for the numbers category -->
-    <color name="category_numbers">#FD8E09</color>
+    <!-- Background color for the condo category -->
+    <color name="category_condos">#FFCC80</color>
 
-    <!-- Background color for the family members category -->
-    <color name="category_family">#379237</color>
+    <!-- Background color for the casinos category -->
+    <color name="category_casinos">#E0E0E0</color>
 
-    <!-- Background color for the colors category -->
-    <color name="category_colors">#8800A0</color>
+    <!-- Background color for the arenas category -->
+    <color name="category_arenas">#FFFF00</color>
 
-    <!-- Background color for the phrases category -->
-    <color name="category_phrases">#16AFCA</color>
+    <!-- Background color for the activity_main page -->
+    <color name="main_background">#B3E5FC</color>
 </resources>
